--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/invitation/invitation",
     "pages/index/index",
     "pages/bookBar/bookBar",
     "pages/column/column",
