--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.1",
 	"appid": "wx399af6bb377709d3",
-	"projectname": "%E8%B4%9D%E5%A3%B3%E4%B9%A6%E5%8F%8B%E4%BC%9A",
+	"projectname": "%E5%B0%8F%E7%A8%8B%E5%BA%8F",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
