--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "pages": [
+    "pages/vipBookDetail/vipBookDetail",
     "pages/index/index",
+    
     "pages/activation/activation",
-   
     "pages/joinJuide/joinJuide",
     "pages/invitation/invitation",
     "pages/invitindex/invitindex",
